syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/v5/x/gitopia/types";

import "gogoproto/gogo.proto";

// Configuration options for DAO governance
message DaoConfig {
  // Whether pull requests require governance proposal
  bool require_pull_request_proposal = 1;
  
  // Whether repository deletion requires governance proposal
  bool require_repository_deletion_proposal = 2;

  // Whether management of collaborators requires governance proposal
  bool require_collaborator_proposal = 3;

  // Whether releases requires governance proposal
  bool require_release_proposal = 4;
}

message Dao {
  string creator = 1;
  uint64 id = 2;
  string address = 3;
  string name = 4; 
  string avatarUrl = 5; 
  repeated string followers = 6; 
  repeated string following = 7; 
  repeated uint64 teams = 8; 
  string location = 9; 
  string website = 10; 
  bool verified = 11; 
  string description = 12; 
  int64 createdAt = 13; 
  int64 updatedAt = 14; 
  repeated uint64 pinned_repos = 15;
  
  // Group associated with the DAO
  uint64 group_id = 16;

  // DAO configuration settings
  DaoConfig config = 17 [(gogoproto.nullable) = false];
}

message GroupDao {
  string dao_address = 1;
}
